--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,43 @@
-<h2>{{appname}}</h2>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Naiki Apparel</h1>
 
 <h5>NPM: </h5>
 <p>{{ npm }}<p>
-<h5>Name: </h5>
-<p>{{ name }}<p>
-<h5>Class: </h5>
-<p>{{ class }}<p>
+
+<h5>Name:</h5>
+<p>{{ name }}</p>
+
+<h5>Class:</h5>
+<p>{{ class }}</p>
+
+{% if not products %}
+<p>Belum ada produk pada naiki apparel.</p>
+{% else %}
+<table>
+  <tr>
+    <th>name</th>
+    <th>price</th>
+    <th>size</th>
+    <th>description</th>
+  </tr>
+
+  {% comment %} Berikut cara memperlihatkan data mood di bawah baris ini 
+  {% endcomment %} 
+  {% for product in products %}
+  <tr>
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.size}}</td>
+    <td>{{product.description}}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
+
+<br />
+
+<a href="{% url 'main:create_product_entry' %}">
+  <button>Add New Product</button>
+</a>
+{% endblock content %}
