--- a/main/templates/card_product.html
+++ b/main/templates/card_product.html
@@ -7,7 +7,7 @@
       <div class="p-4">
         <p class="font-semibold text-lg mb-2">Size</p> 
         <p class="text-gray-700 mb-2">
-          <span class="bg-[linear-gradient(to_bottom,transparent_0%,transparent_calc(100%_-_1px),#CDC1FF_calc(100%_-_1px))] bg-[length:100%_1.5rem] pb-1">{{product.price}}</span>
+          <span class="bg-[linear-gradient(to_bottom,transparent_0%,transparent_calc(100%_-_1px),#CDC1FF_calc(100%_-_1px))] bg-[length:100%_1.5rem] pb-1">{{product.size}}</span>
         </p>
         <div class="mt-4">
           <p class="text-gray-700 font-semibold mb-2">Description</p>
