--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -12,7 +12,7 @@
     <h1 class="text-3xl font-bold text-center mb-8 text-black">Create Product</h1>
   
     <div class="bg-white shadow-md rounded-lg p-6 form-style">
-      <form method="POST" class="space-y-6">
+      <form method="POST" class="space-y-6" style="">
         {% csrf_token %}
         {% for field in form %}
           <div class="flex flex-col">
@@ -31,7 +31,7 @@
           </div>
         {% endfor %}
         <div class="flex justify-center mt-6">
-          <button type="submit" class="bg-indigo-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out w-full">
+          <button type="submit" class="bg-green-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out w-full">
             Create Product Entry
           </button>
         </div>
