--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -17,33 +17,34 @@
       <div class="w-full min-h-4 bg-indigo-700">
       </div>
     </div> -->
-    <div class="h-full w-full py-6  absolute top-0 left-0 z-20 md:hidden flex ">
+    <!-- <div class="h-full w-full py-6  absolute top-0 left-0 z-20 md:hidden flex ">
       <div class="h-full min-w-4 bg-indigo-700 mx-auto">
       </div>
+    </div> -->
   </div>
-</div>
-    <div class="px-3 mb-4">
-      <div class="flex rounded-md items-center bg-green-900 py-2 px-4 w-fit">
-        <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
-      </div>
+  <div class="px-3 mb-4">
+    <div class="flex rounded-md items-center bg-green-900 py-2 px-4 w-fit">
+      <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
     </div>
-    <div class="flex justify-end mb-6">
-        <a href="{% url 'main:create_product_entry' %}" class="bg-green-600 hover:bg-white-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
-            Add New Product
-        </a>
-    </div>
-    
-    {% if not products %}
-    <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-        <img src="{% static 'image/sedih-banget.png' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
-        <p class="text-center text-gray-600 mt-4">Belum ada produk pada Naiki Apparel.</p>
-    </div>
-    {% else %}
-    <div class="columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full">
-        {% for product in products %}
-            {% include 'card_product.html' with product=product %}
-        {% endfor %}
-    </div>
-    {% endif %}
+  </div>
+  <div class="flex justify-end mb-6">
+    <a href="{% url 'main:create_product_entry' %}"
+      class="bg-green-600 hover:bg-white-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+      Add New Product
+    </a>
+  </div>
+
+  {% if not products %}
+  <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
+    <img src="{% static 'image/sedih-banget.png' %}" alt="Sad face" class="w-32 h-32 mb-4" />
+    <p class="text-center text-gray-600 mt-4">Belum ada produk pada Naiki Apparel.</p>
+  </div>
+  {% else %}
+  <div class="columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full">
+    {% for product in products %}
+    {% include 'card_product.html' with product=product %}
+    {% endfor %}
+  </div>
+  {% endif %}
 </div>
 {% endblock content %}
